# q

./: .flake8  .gitignore  .windsurfrules  LICENSE  Makefile  README.md  bench.py  download.py  encoder.py  main.mojo  pyproject.toml  q.py  test_main.mojo  test_q.py  utils.py
.github/workflows/: q.yml
eval/: bench_transformers.py  lm-bench.sh  lm-eval.sh
notebooks/: model_eval.ipynb
q/: __init__.mojo  cli.py  common.py  download.py  encoder.py  eval.py  generation.py  gpt2.py  params.py  stream.py  types.py  utils.mojo
q/backend/: mlx.py  numpy.py
q/bench/: base.py  cli.py  hf.py  q.py
scripts/: mac_mem_usage.c  split_params_safetensors.py
test/: conftest.py  test_encoder.py  test_eval.py  test_generator.py  test_gpt2.py  test_params.py  test_q.py  test_stream.py
