[tool.poetry]
name = "q"
version = "0.1.0"
description = ""
authors = ["Takanori Ishikawa <takanori.ishikawa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
regex = "^2024.5.15"
requests = "^2.32.2"
tqdm = "^4.66.4"

# JAX
wheel = "^0.43.0"
ml-dtypes = "~0.3.1"
jax-metal = "^0.0.7"
jax = "0.4.26"
jaxlib = "0.4.26"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
tensorflow = { version = "==2.16.1", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.extras]
download = ["tensorflow"]

[tool.poetry.scripts]
q = "q:main"
download = "download:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
