[tool.poetry]
name = "q"
version = "0.1.0"
description = ""
authors = ["Takanori Ishikawa <takanori.ishikawa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
regex = "^2024.5.15"
tqdm = "^4.66.4"
safetensors = "^0.4.2"
mlx = "^0.23.2"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
tensorflow = { version = "==2.16.1", optional = true }
requests = { version = "^2.32.2", optional = true }
numpy = { version = "^1.26.4", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
types-tqdm = "^4.66.0.20240417"
types-regex = "^2024.5.15.20240519"
types-requests = "^2.32.0.20240712"
types-tensorflow = "^2.16.0.20240627"
pytest = "^8.2.2"
lm-eval = "0.4.8"
pyright = "^1.1.397"

[tool.poetry.extras]
download = ["tensorflow", "requests", "numpy"]

[tool.poetry.scripts]
q = "q.cli:main"
download = "q.download:main"
eval = "q.eval:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["q", "test"]
exclude = ["**/__pycache__"]

reportMissingImports = "error"
reportMissingTypeStubs = false
